Add suite entries

--- a/conf/distributions/fsfw-stix-11.conf
+++ b/conf/distributions/fsfw-stix-11.conf
@@ -1,6 +1,7 @@
 Origin: FSFW-Dresden:eMPee584
 Label: fsfw-stix-production
 Codename: fsfw-stix-11
+Suite: fsfw-stix-11
 Log: fsfw-stix-11
 Architectures: amd64 i386 source
 Components: main contrib non-free
