--- a/conf/distributions/schulstick-11-staging-GymDDPlauen.conf
+++ b/conf/distributions/schulstick-11-staging-GymDDPlauen.conf
@@ -1,6 +1,7 @@
 Origin: FSFW-Dresden:eMPee584
 Label: schulstick-staging
 Codename: schulstick-11-staging-GymDDPlauen
+Suite: schulstick-11-staging-GymDDPlauen
 Log: schulstick-11-staging-GymDDPlauen
 Architectures: amd64 i386 source
 Components: main contrib non-free
