--- a/conf/distributions/schulstick-11.conf
+++ b/conf/distributions/schulstick-11.conf
@@ -1,6 +1,7 @@
 Origin: FSFW-Dresden:eMPee584
 Label: schulstick-production
 Codename: schulstick-11
+Suite: schulstick-11
 Log: schulstick-11
 Architectures: amd64 i386 source
 Components: main contrib non-free
