--- a/conf/distributions/fsfw-stix-11-security.conf
+++ b/conf/distributions/fsfw-stix-11-security.conf
@@ -1,6 +1,7 @@
 Origin: FSFW-Dresden:eMPee584
 Label: fsfw-stix-production
 Codename: fsfw-stix-11-security
+Suite: fsfw-stix-11-security
 Log: fsfw-stix-11-security
 Architectures: amd64 i386 source
 Components: main contrib non-free
