Rework distributions config

--- a/conf/distributions/schulstick-12-49GS.conf
+++ b/conf/distributions/schulstick-12-49GS.conf
@@ -1,7 +1,7 @@
 Origin: FSFW-Dresden:eMPee584
-Label: FSFW Schulstick Packages for Gymnasium Dresden Plauen
-Codename: schulstick-12-GymDDPlauen
-Log: schulstick-12-GymDDPlauen
+Label: FSFW Schulstick Packages for 49. Grundschule Dresden
+Codename: schulstick-12-49GS
+Log: schulstick-12-49GS
 Architectures: amd64 i386 source
 Components: main
 DebIndices: Packages Release . .gz .bz2
