--- a/conf/distributions/schulstick-12.conf
+++ b/conf/distributions/schulstick-12.conf
@@ -1,10 +1,8 @@
 Origin: FSFW-Dresden:eMPee584
-Label: schulstick-production
+Label: FSFW Schulstick Packages
 Codename: schulstick-12
-Suite: schulstick-12
 Log: schulstick-12
 Architectures: amd64 i386 source
-Components: main contrib non-free
-Description: Schulstick packages for Debian bullseye
+Components: main
 DebIndices: Packages Release . .gz .bz2
 SignWith: AC368D4F6002266DF2CE2D86FBE242D505D200AF
