--- a/conf/distributions/fsfw-stix-12-security.conf
+++ b/conf/distributions/fsfw-stix-12-security.conf
@@ -1,10 +1,8 @@
 Origin: FSFW-Dresden:eMPee584
-Label: fsfw-stix-production
+Label: FSFW Stix Security Updates
 Codename: fsfw-stix-12-security
-Suite: fsfw-stix-12-security
 Log: fsfw-stix-12-security
 Architectures: amd64 i386 source
 Components: main contrib non-free
-Description: usb-live-linux security updates for Debian bullseye
 DebIndices: Packages Release . .gz .bz2
 SignWith: AC368D4F6002266DF2CE2D86FBE242D505D200AF
