--- a/conf/distributions/schulstick-12-security.conf
+++ b/conf/distributions/schulstick-12-security.conf
@@ -1,7 +1,7 @@
 Origin: FSFW-Dresden:eMPee584
-Label: FSFW Schulstick Packages for Gymnasium Dresden Plauen
-Codename: schulstick-12-GymDDPlauen
-Log: schulstick-12-GymDDPlauen
+Label: FSFW Schulstick Security Updates
+Codename: schulstick-12-security
+Log: schulstick-12-security
 Architectures: amd64 i386 source
 Components: main
 DebIndices: Packages Release . .gz .bz2
