Add suite to all repos so it doesn't show up as <NULL>

--- a/conf/distributions/fsfw-stix-12-security.conf
+++ b/conf/distributions/fsfw-stix-12-security.conf
@@ -1,5 +1,6 @@
 Origin: FSFW-Dresden:eMPee584
 Label: FSFW Stix Security Updates
+Suite: fsfw-stix-12
 Codename: fsfw-stix-12-security
 Log: fsfw-stix-12-security
 Architectures: amd64 i386 source
