--- a/conf/distributions/fsfw-stix-12.conf
+++ b/conf/distributions/fsfw-stix-12.conf
@@ -1,5 +1,6 @@
 Origin: FSFW-Dresden:eMPee584
 Label: FSFW Stix Packages
+Suite: fsfw-stix-12
 Codename: fsfw-stix-12
 Log: fsfw-stix-12
 Architectures: amd64 i386 source
