--- a/conf/distributions/schulstick-12-GymDDPlauen.conf
+++ b/conf/distributions/schulstick-12-GymDDPlauen.conf
@@ -1,5 +1,6 @@
 Origin: FSFW-Dresden:eMPee584
 Label: FSFW Schulstick Packages for Gymnasium Dresden Plauen
+Suite: fsfw-stix-12
 Codename: schulstick-12-GymDDPlauen
 Log: schulstick-12-GymDDPlauen
 Architectures: amd64 i386 source
