--- a/conf/distributions/schulstick-12-security.conf
+++ b/conf/distributions/schulstick-12-security.conf
@@ -1,5 +1,6 @@
 Origin: FSFW-Dresden:eMPee584
 Label: FSFW Schulstick Security Updates
+Suite: fsfw-stix-12
 Codename: schulstick-12-security
 Log: schulstick-12-security
 Architectures: amd64 i386 source
