--- a/conf/distributions/schulstick-12-49GS.conf
+++ b/conf/distributions/schulstick-12-49GS.conf
@@ -1,5 +1,6 @@
 Origin: FSFW-Dresden:eMPee584
 Label: FSFW Schulstick Packages for 49. Grundschule Dresden
+Suite: fsfw-stix-12
 Codename: schulstick-12-49GS
 Log: schulstick-12-49GS
 Architectures: amd64 i386 source
